tests/negative/optimizer/select-sum-anon.orng
fn main() -> Int {
    let x: (a | b) = .a
    x.b
    0
}